# BuoyancySimulator

./: .gitignore  CMakeLists.txt  README.md  TODO
BuoyancySimulator/: CMakeLists.txt
BuoyancySimulator/include/: buoyant.hpp  camera.hpp  main.hpp  models.hpp  shader.hpp  voxels.hpp
BuoyancySimulator/shaders/: camera.vert
BuoyancySimulator/src/: buoyant.cpp  camera.cpp  main.cpp  models.cpp  shader.cpp  voxels.cpp
contrib/: CMakeLists.txt
contrib/freeglut-3.4.0/lib/: libglut.so.3.12.0
contrib/glm/test/bug/: test-bug_ms_vec_static
contrib/glm/test/core/: test-core_cpp_constexpr  test-core_cpp_defaulted_ctor  test-core_force_aligned_gentypes  test-core_force_arch_unknown  test-core_force_compiler_unknown  test-core_force_ctor_init  test-core_force_cxx03  test-core_force_cxx98  test-core_force_cxx_unknown  test-core_force_explicit_ctor  test-core_force_inline  test-core_force_platform_unknown  test-core_force_pure  test-core_force_quat_wxyz  test-core_force_unrestricted_gentype  test-core_force_xyzw_only  test-core_func_common  test-core_func_exponential  test-core_func_geometric  test-core_func_integer  test-core_func_integer_bit_count  test-core_func_integer_find_lsb  test-core_func_integer_find_msb  test-core_func_matrix  test-core_func_noise  test-core_func_packing  test-core_func_swizzle  test-core_func_trigonometric  test-core_func_vector_relational  test-core_setup_force_cxx98  test-core_setup_force_size_t_length  (+21 more)
lib/: libGLEW.so.2.2.0  libGLEWd.so.2.2.0
models/: boat.boat  cube.boat  fancy.boat
shaders/: buoyant.frag  buoyant.geom  buoyant.vert  buoyant_application.frag  buoyant_application.vert  buoyant_calcs.frag  buoyant_calcs.geom  camera.frag  camera.vert  force_visualization.frag  force_visualization.geom  force_visualization.vert  forces_reduction.comp  forcesreduction.comp  ocean.frag  ocean.vert  ocean_heightmap.frag  ocean_heightmap.vert  torques_reduction.comp  torquesreduction.comp
(+135 files in other folders)
